--- a/style1.css
+++ b/style1.css
@@ -1,7 +1,8 @@
 *{
     margin: 0%;
+    padding: 0%;
     font-family: Arial;
-    border:boder-box;
+    border-size:boder-box;
 }
 .navbar{
     height: 60px;
